# burch

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  run.sh
apps/api/: Dockerfile  README.md  eidolon.db  pyproject.toml
apps/api/eidolon_api/: config.py  database.py  main.py  models.py  schemas.py
apps/api/eidolon_api/grounding/: __init__.py  deal_flow_engine.py
apps/api/eidolon_api/services/: chat.py  discovery.py  entity.py  ingestion.py  production.py  reporting.py  scoring.py  simulation.py
apps/api/eidolon_api/services/providers/: base.py  paid.py  router.py  searxng.py
apps/api/tests/: test_api.py
apps/web/: next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/e2e/: eidolon.spec.ts
apps/web/lib/: api.ts  types.ts
apps/web/playwright-report/: index.html
apps/worker/: Dockerfile  README.md  pyproject.toml
apps/worker/eidolon_worker/: config.py  main.py  scheduler.py  tasks.py
infra/searxng/: settings.yml
